2009-12-01  Antonello Provenzano  <antonello@deveel.com>
	* Expression.cs: support for CaseExpressions
	
2009-11-30  Antonello Provenzano  <antonello@deveel.com>
	* DataTable.cs: supports function for deleting the
	row at the current index of a cursor.
	* Expression.cs: added support for evaluation the 
	generation and evaluation of query plans.
	* TObject.cs: implemented method GetQueryPlan to
	support the creation of TQueryPlanType objects.
	
2009-11-28  Antonello Provenzano  <antonello@deveel.com>
	* Expression.cs: added static method 'Evaluate' to evaluate
	a given string into an expression out of context.
	* TObject.cs: implements the IConvertible interface.
	* ObjectTransfer.cs: initial support for IUserDefinedType
	* TableDataConglomerate.cs: added logic for the creation
	of the tables dedicated to the handling of UDTs.
	
2009-11-27  Antonello Provenzano  <antonello@deveel.com>
	* Variable.cs: renamed to VariableName to support the
	definition of a more complex variable set system
	* Variable.cs: implemented to support the definition
	of varibales, with types and names set
	* DatabaseConnection.cs: added support for handling
	session variables:
		- 'GetVariable' method renamed to 'GetPersistentVariable'
		- 'SetVariable' method renamed to 'SetPersistentVariable'
		- implemented method 'GetVariable' to return session
		variables
		- modified the implementation of the method	'SetVariable'
	* SimpleTransaction.cs: implemented variable handling mechanism
	* Database.cs: generated table sUSRConnectionVariables
	granted
	* Expression.cs: resolves variable references
	* IQueryContext.cs: added method GetVariable
	
2009-11-25  Antonello Provenzano  <antonello@deveel.com>
	* Transaction.cs: added support for cursors
	* DatabaseConnection.cs: implemented methods to callback
	to the transaction instance for cursor management
	* IStoreSystem.cs: moved to Deveel.Data.Store namespace
	for coherency
	* V1FileStoreSystem.cs: moved to Deveel.Data.Store 