@@ -55,6 +55,7 @@
     <Compile Include="Deveel.Data.Client\ConnectionTest.cs" />
     <Compile Include="Deveel.Data.Client\LobTest.cs" />
     <Compile Include="Deveel.Data.Functions\FunctionTest.cs" />
+    <Compile Include="Deveel.Data.Sql\SelectTest.cs" />
     <Compile Include="Deveel.Data\CaseTest.cs" />
     <Compile Include="Deveel.Data\CreateDatabaseTest.cs" />
     <Compile Include="Deveel.Data\CursorTest.cs" />
